--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     <div class="fundo">
         <div class="calculadora">
-            <h1>resultado</h1>
+            <h1>calculadora</h1>
+            <p id="resultado">resultado</p>
             <table>
                 <tr>
                     <td><button class="botão">C</button></td>
@@ -35,10 +36,10 @@
                     <td><button class="botão">1</button></td>
                     <td><button class="botão">2</button></td>
                     <td><button class="botão">3</button></td>
-                    <td rowspan="2"><button class="botão">=</button></td>
+                    <td rowspan="2"><button class="botão" style="height: 106px;">=</button></td>
                 </tr>
                 <tr>
-                    <td colspan="2"><button class="botão">0</button></td>
+                    <td colspan="2"><button class="botão" style="width: 106px;">0</button></td>
                     <td><button class="botão">.</button></td>
                 </tr>
             </table>
