--- a/index.html
+++ b/index.html
@@ -4,47 +4,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
 
 <body>
-    <div class="fundo">
-        <div class="calculadora">
-            <h1>calculadora</h1>
-            <p id="resultado">resultado</p>
-            <table>
-                <tr>
-                    <td><button class="botão">C</button></td>
-                    <td><button class="botão">></button></td>
-                    <td><button class="botão">/</button></td>
-                    <td><button class="botão">x</button></td>
-                </tr>
-                <tr>
-                    <td><button class="botão">7</button></td>
-                    <td><button class="botão">8</button></td>
-                    <td><button class="botão">9</button></td>
-                    <td><button class="botão">-</button></td>
-                </tr> 
-                <tr>
-                    <td><button class="botão">4</button></td>
-                    <td><button class="botão">5</button></td>
-                    <td><button class="botão">6</button></td>
-                    <td><button class="botão">+</button></td>
-                </tr>
-                <tr>
-                    <td><button class="botão">1</button></td>
-                    <td><button class="botão">2</button></td>
-                    <td><button class="botão">3</button></td>
-                    <td rowspan="2"><button class="botão" style="height: 106px;">=</button></td>
-                </tr>
-                <tr>
-                    <td colspan="2"><button class="botão" style="width: 106px;">0</button></td>
-                    <td><button class="botão">.</button></td>
-                </tr>
-            </table>
+    <div class="calculadora">
+        <h1>calculadora</h1>
+        <input type="text" disabled id="display">
+        <div class="box-botão">
+            <button>C</button>
+            <button>&lt</button>
+            <button>/</button>
+            <button>*</button>
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button>-</button>
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button>+</button>
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>0</button>
+            <button>.</button>
+            <button>=</button>
         </div>
     </div>
+    <script src="./Apk/apk.js"></script>
 </body>
 
 </html>
